force-app/main/default/objects/Insurance__c/fields/Aadhar__c.field-meta.xml
<CustomField>
    <fullName>Aadhar__c</fullName>
    <label>Aadhar</label>
    <referenceTo>Aadhar__c</referenceTo>
    <relationshipLabel>Insurances</relationshipLabel>
    <relationshipName>Insurances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>