force-app/main/default/objects/Insurance__c/fields/Cover_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cover_Amount__c</fullName>
    <label>Cover Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>