force-app/main/default/objects/Insurance__c/fields/Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Date__c</fullName>
    <formula>ADDMONTHS(Issued_On__c , Duration__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maturity Date</label>
    <type>Date</type>
</CustomField>